# ChangeLog for dev-java/maven-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.59 2009/10/26 08:01:29 volkmar Exp $

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  maven-bin-2.0.10-r1.ebuild, maven-bin-2.1.0.ebuild,
  maven-bin-2.2.1.ebuild:
  Re-Keywording for ppc, bug 269616

*maven-bin-2.2.1 (11 Sep 2009)

  11 Sep 2009; Miroslav Šulc <fordfrog@gentoo.org> +maven-bin-2.2.1.ebuild:
  Version bump. maven-2.2.1 contains jdk 1.5 jar so it needs
  >=virtual/jdk-1.5

*maven-bin-2.1.0 (12 May 2009)
*maven-bin-2.0.10-r1 (12 May 2009)

  12 May 2009; Alistair Bush <ali_bush@gentoo.org>
  +maven-bin-2.0.10-r1.ebuild, +maven-bin-2.1.0.ebuild:
  Add support for eselect-maven. Required as mvn have made possible
  incompatiable changes to 2.1.

  27 Apr 2009; Brent Baude <ranger@gentoo.org> maven-bin-2.0.10.ebuild:
  Marking maven-bin-2.0.10 ppc for bug 265108

  18 Apr 2009; Markus Meier <maekke@gentoo.org> maven-bin-2.0.10:
  amd64/x86 stable, bug #265018

*maven-bin-2.0.10 (04 Mar 2009)

  04 Mar 2009; Alistair Bush <ali_bush@gentoo.org> +maven-bin-2.0.10.ebuild:
  Version Bump.

  25 Oct 2008; nixnut <nixnut@gentoo.org> maven-bin-2.0.9.ebuild:
  Stable on ppc wrt bug 242982

  23 Oct 2008; Markus Meier <maekke@gentoo.org> maven-bin-2.0.9.ebuild:
  amd64/x86 stable, bug #242982

*maven-bin-2.0.9 (10 Apr 2008)

  10 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  +maven-bin-2.0.9.ebuild:
  Version bump. Fixes bug #217207.

  06 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  -maven-bin-1.0.2.ebuild, -maven-bin-2.0.7.ebuild:
  Delete old versions.

  28 Mar 2008; Markus Meier <maekke@gentoo.org> maven-bin-2.0.8.ebuild:
  amd64 stable, bug #208512

  08 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  maven-bin-1.1.ebuild:
  amd64 stable, bug #212655.

  08 Mar 2008; Markus Meier <maekke@gentoo.org> maven-bin-1.1.ebuild:
  x86 stable, bug #212655
