@@ -8,7 +8,7 @@ EBUILD maven-bin-2.0.10-r1.ebuild 1170 RMD160 b547098aaf1b67c6ea61b44b1a41dc643a
 EBUILD maven-bin-2.0.10.ebuild 1133 RMD160 c9c41f33f342fb00af74498923ffe563699c9b5e SHA1 20f3608459e0bdb7c96717d3f121421efbc47bea SHA256 c6cb764f04ba61fd38fca8b061a8b76741c75a2c50fb0cc7219bf80e4cff37a9
 EBUILD maven-bin-2.0.8.ebuild 1125 RMD160 fb5e3538c349f4b4cb13c526c659b9ed91aee3f1 SHA1 c15a977d1eb53bf79ccac1b6f2066d1fbcccf7a7 SHA256 2a2d10900fe22ac8010777c09276706a13073422b73d98d248e248d776f55659
 EBUILD maven-bin-2.0.9.ebuild 1132 RMD160 2f3331a5f6ca1111d8966759f4f542e80436ec26 SHA1 3155c6529e6ddb56e15c6852673630feab5a0534 SHA256 31e10fdbf8e45512bf435c54a3d6a166b321cb3153005e6ae57bb69abb6d46bf
-EBUILD maven-bin-2.1.0.ebuild 1166 RMD160 358f771f247f272bf6826426b7801cf696b3a3be SHA1 7f92adf3ba4229b166b3ca35494fc0edf08823be SHA256 1dc856d9c8551e6959d68d7069de379cc2e0c9683dbdecfda2c74e44fa0e67ed
-EBUILD maven-bin-2.2.1.ebuild 1190 RMD160 c475d6ec2d203c3b58e37eb0673db169e22acbda SHA1 0df1d66a3f629a9d9d3ae0d7da250ede6463e319 SHA256 0d03fa463627bc1907cd8857570d8b7cae38fd6a35b024d88023acc7c453ffed
-MISC ChangeLog 10217 RMD160 162f5e77805bd536de0bb2788834877c9e4b718d SHA1 cdb5fe0c580ee2a023cece867de42d914ea15153 SHA256 e956861c5879bb4b0f2d839c3ee7f8df237b1071052d7c619d0f9bbd21c4c024
+EBUILD maven-bin-2.1.0.ebuild 1169 RMD160 9700c07164747cc37dca6431dae2ed99b5025efa SHA1 a544e67fbf4095199130c212056ce67dbd8242bc SHA256 2bc21896271bbd5b39641d70b0c824dc0f479997069b977c69ef67125183edf0
+EBUILD maven-bin-2.2.1.ebuild 1193 RMD160 8861784f3e88c2d1237804c12a0daff708a69ca2 SHA1 8a8f7c5d854aa4fed1e26722fcec64c85c256d74 SHA256 a2bdf42e5b7290d69d46787eda5ee536ca961dd882e037ef8df7b652ba3df07d
+MISC ChangeLog 10530 RMD160 ab6d6a313301b09bc6be6874e658733946e61147 SHA1 916606fa6adaaa93d29a4775f2cf6edab71c7459 SHA256 c354d27cdaaba9ec96070d0de68e02a59bd932ffa30a962d59824e06d8a659dc
 MISC metadata.xml 532 RMD160 23fa79fc26d775ecf394078ea2b437c13fcb1c1c SHA1 9788d76408e6137cfac15b1cbe453f1f29835b9a SHA256 737cab248d8870cc15bf2526d49b4e1a92ad53078f466210337075c1c57e138f
